fix photo sizing and on mobile

--- a/source/stylesheets/_mixins.scss
+++ b/source/stylesheets/_mixins.scss
@@ -1,5 +1,6 @@
 $points: (
   smaller: 80em,
+  small: 40em,
 );
 
 @mixin breakpoint($point) {
